--- a/style.css
+++ b/style.css
@@ -63,3 +63,29 @@ blockquote cite:before {
 content: "\2014 \0020";
 }
 */
+
+html, body, div, span, applet, object, iframe,
+p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	font-family: 'Inconsolata', monospace;
+}
+
+.entry-title,
+.entry-title a,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Rubik', sans-serif;
+}
+
+.author,.author a, .site-title,.site-title a {
+	font-family: 'ZCOOL KuaiLe', cursive;
+}
