--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Independent Publisher Child Theme
-Theme URI: http://independentpublisher.me/
-Author: Raam Dev
-Author URI: http://raamdev.com
+Theme Name: Independent Publisher Child GG
+Theme URI: https://github.com/geongeorge/Independent-Publisher-Child-Theme-GG
+Author: Geon George
+Author URI: http://geongeorge.com
 Description: A clean minimal theme for independent publishers. Ideal for single-author blogs.
 Template: independent-publisher
 Version: 1.2.4
